--- a/my-crate/Cargo.toml
+++ b/my-crate/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 cfg-if = "1.0.0"
+js-sys = "0.3.56"
 wasm-bindgen = "0.2.63"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
@@ -27,7 +28,16 @@ wee_alloc = { version = "0.4.5", optional = true }
 [dependencies.web-sys]
 version = "0.3.35"
 features = [
-    "console"
+    "console",
+    'Document',
+    'Element',
+    'HtmlCanvasElement',
+    'WebGlBuffer',
+    'WebGlVertexArrayObject',
+    'WebGl2RenderingContext',
+    'WebGlProgram',
+    'WebGlShader',
+    'Window',
 ]
 
 
